# octopus

./: Cargo.toml  README.md
assets/: input
src/: lib.rs  main.rs
